--- a/index.html
+++ b/index.html
@@ -8,5 +8,20 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img
+    src="https://i.imgur.com/H1qsYEl.png"
+    alt="comedic crow gets wholesome support"
+    />
+
+    <img
+    src="https://i.imgur.com/H1qsYEl.png"
+    alt="comedic crow gets wholesome support"
+    />
+
+    <img
+    src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    alt="my company name"
+    title="We're here to help you!"
+    />
   </body>
 </html>
